Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25770

[Reg] FakeVim : After splitting, doing ":w" shows error "File not saved"

XMLWordPrintable

    • macOS
    • d0c32df3fed07c27be5446996b368a37cff36b4c (qt-creator/qt-creator/master)

      Steps to reproduce:
      1. Open any file for editing
      No need to make actual changes to the file
      2. Split the window using the Vim command ":vs"
      3. Change to focus back to the original split using "Cmd-W Cmd-W", or clicking in the split with the mouse
      4. Try to save the file using the Vim command ":w"

      Result:
      The field in the lower-right corner displays the error message: "File not saved".

      NB: Using File -> Save "file.cpp" does work fine, though, which means that this is not an issue with permissions.

      The issue persists even after closing one of the splits.

      This feature works fine with QtCreator 4.14.x.

        For Gerrit Dashboard: QTCREATORBUG-25770
        # Subject Branch Project Status CR V

            hjk hjk
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            5 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes