FakeVim: Don't create two handlers for one editor

Amends 206e9f95fb1.

Fixes: QTCREATORBUG-25770
Change-Id: I4028a7c8257ee3985fd2198e789d98b25901d92d
Reviewed-by: Eike Ziller <eike.ziller@qt.io>